maps are included

--- a/public/materialdesign.html
+++ b/public/materialdesign.html
@@ -38,7 +38,7 @@
     <span class="mdl-badge" data-badge="4">Inbox</span>
     
   </body>
-            <a class="mdl-navigation__link" href="">SETTING</a>
+            <a class="mdl-navigation__link" href="maps.html">SETTING</a>
             <a class="mdl-navigation__link" href="">CONTACT US</a>
           </nav>
         </div>
